<resources>
    <string name="app_name">HabitsTracker</string>
    <string name="fab_desc">The button for adding habits</string>
    <string name="cp_desc">The button for adding habits</string>
    <string name="hint_habit_name">Name</string>
    <string name="hint_habit_desc">Description</string>
    <string name="hint_amount">Amount</string>
    <string name="frequency">Frequency:</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="type">Type:</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="priority">Priority:</string>
    <string name="current_color">Current color</string>
    <string name="separator" translatable="false">/</string>
    <string-array name="habit_priority">
        <item>Not selected</item>
        <item>Important</item>
        <item>Not important</item>
    </string-array>
    <string-array name="habit_frequency">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string name="def_name">Habit</string>
    <string name="def_desc">An unimportant good habit</string>
    <string name="def_Type">Not selected</string>
    <string name="toast_fill_fields">To save the habit, fill in all required fields</string>
    <string name="menu">Menu</string>
    <string name="habits">Habits</string>
    <string name="info">Info</string>
    <string name="info_content">An application that helps you keep track of your habits.</string>
    <string name="add_edit_habit">Add/Edit habit</string>
    <string name="filter">Filter</string>
    <string name="sorting">Sorting</string>
    <string name="sorting_desc">by amount</string>
    <string name="done">Done</string>

</resources>