<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvHabit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        app:cardBackgroundColor="@color/turquoise"
        app:cardCornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">


            <TextView
                android:id="@+id/tvTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="@dimen/def_text_size"
                android:layout_marginTop="@dimen/def_margin"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />


            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Good"
                android:layout_marginTop="@dimen/def_margin"

                android:textSize="@dimen/def_text_size"

                app:layout_constraintStart_toEndOf="@+id/tvTypeTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />


            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/hint_habit_name"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/def_margin"
                android:text="@string/hint_habit_desc"
                android:textSize="@dimen/def_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />


            <TextView
                android:id="@+id/tvPriorityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textSize="@dimen/def_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTypeTitle" />


            <TextView
                android:id="@+id/tvPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Importent"
                android:textSize="@dimen/def_text_size"
                app:layout_constraintStart_toEndOf="@+id/tvPriorityTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvType" />

            <TextView
                android:id="@+id/tvSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvFrequency" />

            <TextView
                android:id="@+id/tvFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_frequency"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_amount"
                android:textSize="24sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvSeparator"
                app:layout_constraintTop_toBottomOf="@+id/tvPriority" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>